# retargeting-ros2-sim

./: .gitattributes  .gitignore  README.md
isaacsim/scripts/: pose_array_spheres.py  retarget_keypoint_spheres.py  setup_g1_jointstate_subscriber.py  stop_pose_array_spheres.py  stop_retarget_keypoint_spheres.py
scripts/: all.sh  run_angle_processor.sh  run_human_model_fitter.sh  run_human_pose_bridge.sh  run_human_pose_processor.sh  run_keypoint_validator.sh  run_pose_bridge.sh  run_retarget_keypoint_bridge.sh  run_robot_adapter.sh  run_ros_node.sh  run_worker.sh  setup_ros_env.sh
src/angle_processor/: package.xml  setup.py
src/angle_processor/angle_processor/: node.py  processor.py
src/angle_processor/test/: test_angle_processor.py
src/human_model_fitter/: package.xml  setup.cfg  setup.py
src/human_model_fitter/human_model_fitter/: fitter_node.py  human_model.py  simple_human_model.py  udeas.py  variables.py
src/human_pose_processor/: package.xml  setup.cfg  setup.py
src/human_pose_processor/human_pose_processor/: keypoint_validator_node.py  processor_node.py
src/hybrik_msgs/: CMakeLists.txt  package.xml
src/hybrik_msgs/msg/: HumanJointAngle.msg  HumanJointAngles.msg  Joints3D.msg
src/hybrik_pose_bridge/: package.xml  setup.cfg  setup.py
src/hybrik_pose_bridge/hybrik_pose_bridge/: pose_array_bridge.py
src/hybrik_ros/: package.xml  setup.cfg  setup.py
src/hybrik_ros/hybrik_ros/: __init__.py  inferencer.py  node.py  tcp_client.py
src/hybrik_ros/scripts/: hybrik_worker_server.py  (+1 more)
src/robot_adapter/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
