<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybrik_pose_bridge</name>
  <version>0.0.0</version>
  <description>Bridge HybrIK custom joint messages to standard ROS pose messages for visualization.</description>
  <maintainer email="Tang29Zx@outlook.com">tang</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hybrik_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
